#57: In external annotator, check file dir instead of file
This will avoid false positives